--- a/src/components/Toolbar.scss
+++ b/src/components/Toolbar.scss
@@ -4,3 +4,13 @@
   background-color: #d3d3d3;
   overflow: hidden;
 }
+
+.visually-hidden {
+  clip-path: inset(100%);
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
