--- a/src/components/Toolbar.scss
+++ b/src/components/Toolbar.scss
@@ -5,12 +5,8 @@
   overflow: hidden;
 }
 
-.visually-hidden {
-  clip-path: inset(100%);
-  clip: rect(1px, 1px, 1px, 1px);
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
+HTML CSS JSResult Skip Results Iframe EDIT ON body {
+  max-width: 700px;
+  padding: 1.6em;
+  font-size: 150%;
 }
