--- a/src/components/Dialog.scss
+++ b/src/components/Dialog.scss
@@ -7,7 +7,7 @@
   bottom: 0;
   margin: auto;
   width: 400px;
-  height: 150px;
+  height: 200px;
   box-shadow: 0 5px 10px 2px rgba(195, 192, 192, 0.5);
   padding: 20px;
   text-align: center;
@@ -18,6 +18,6 @@
   position: absolute;
   top: 0.5em;
   right: 0.5em;
-  margin-top: 0;
+  margin: 10px;
   line-height: 1;
 }
