--- a/src/components/Toolbar.scss
+++ b/src/components/Toolbar.scss
@@ -10,3 +10,12 @@ HTML CSS JSResult Skip Results Iframe EDIT ON body {
   padding: 1.6em;
   font-size: 150%;
 }
+.visually-hidden {
+  clip-path: inset(100%);
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
